deploy/opengauss-summary/oauth-proxy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opengauss-oauth2-proxy
  namespace: opengauss-summary
spec:
  selector:
    k8s-app: opengauss-oauth2-proxy
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: opengauss-oauth2-proxy
  name: opengauss-oauth2-proxy
  namespace: opengauss-summary
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      k8s-app: opengauss-oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: opengauss-oauth2-proxy
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      containers:
      - args:
        - --provider=gitee
        - --email-domain=*
        - --proxy-prefix=/oauth2
        - --skip-validate-email=true
        - --skip-auth-regex=^/agreement_ch.html
        - --skip-auth-regex=^/agreement_en.html
        - --upstream=http://opengauss-summary-service.opengauss-summary.svc.cluster.local:8080
        - --http-address=0.0.0.0:4180
        - --cookie-expire=6h0m0s
        - --set-xauthrequest=true
        - --custom-templates-dir=/bin/static/login
        - --custom-templates-sign-in=gauss.html
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:ad4bd4e8d03cd33395c19483bc4370464db5c311
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
